# nommie-v1-archive

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit  test-pre-commit.sh
apps/backend/: .env.example  Cargo.toml
apps/backend/migration/: Cargo.toml
apps/backend/migration/src/: lib.rs  m20250101_000000_init_schema.rs  m20250726_153846_create_users_table.rs
apps/backend/src/: bootstrap.rs  game_management.rs  jwt.rs  lib.rs  main.rs  user_management.rs
apps/backend/src/dto/: bid_request.rs  game_snapshot.rs  game_summary.rs  mod.rs  play_request.rs  trump_request.rs
apps/backend/src/entity/: game_players.rs  game_rounds.rs  games.rs  mod.rs  prelude.rs  round_bids.rs  round_hands.rs  round_scores.rs  round_tricks.rs  trick_plays.rs  users.rs
apps/backend/src/game_management/: bidding.rs  mod.rs  orchestration.rs  rules.rs  scoring.rs  state.rs  tricks.rs
apps/backend/src/routes/: game.rs
apps/backend/src/test_support/: common.rs
apps/backend/tests/: integration_test.rs  smoke.rs
apps/backend/tests/common/: mod.rs
apps/frontend/: .env.example  .prettierignore  NEXTAUTH_SETUP.md  eslint.config.mjs  package.json  tsconfig.tsbuildinfo
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/game/[id]/: page.tsx
apps/frontend/app/lobby/: page.tsx
apps/frontend/components/: BiddingInterface.tsx  Card.tsx  PlayerHand.tsx
apps/frontend/components/auth/: LoginButton.tsx  ProtectedApiTest.tsx
apps/frontend/components/game/: CreateGameButton.tsx
apps/frontend/components/providers/: SessionProvider.tsx
apps/frontend/hooks/: usePolling.ts
apps/frontend/lib/: auth.ts  config.ts
apps/frontend/types/: next-auth.d.ts
docker/postgres/: apply_schema_and_grants.sql.in  ensure_role.sql.in  init.sh  init.sql
scripts/: test-int.sh
(+1 files in other folders)
