[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
http = "0.2"
jsonwebtoken = "9.2"
futures-util = "0.3"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
sea-orm-migration = "1"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dependencies.migration]
path = "migration"
