[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sea-orm-migration]
version = "1"
features = [
  "runtime-actix-native-tls",
  "sqlx-postgres",
  "with-uuid",
  "with-chrono",
]
